--- a/submissions/dissertation/sections/evaluation.tex
+++ b/submissions/dissertation/sections/evaluation.tex
@@ -2,9 +2,20 @@
 
 \label{sec:evaluation}
 
-\textbf{TODO}
-
 \subsection{Successes}
+
+One obvious success of the project is that we have implemented the
+decentralised prediction market that we originally intended based on the work
+of Freeman et al. A key component of the market is that participants are
+incentivised to act in the desired way through paying each user a deliberate
+and calculated amount of money. This has required building a strong
+understanding of their paper to ensure everything has been implemented
+correctly so that we may achieve the theoretical guarantees that they outline.
+
+This has required not only building a thorough understanding
+of their paper to ensure everything has been implemented correctly, but also
+becoming well-acquainted with the literature surrounding prediction markets in
+general. 
 
 \subsection{Failures}
 
