--- a/submissions/dissertation/dissertation.tex
+++ b/submissions/dissertation/dissertation.tex
@@ -168,6 +168,7 @@
 
 \input{sections/introduction}
 \input{sections/background}
+\input{sections/review}
 \input{sections/goals}
 \input{sections/design}
 \input{sections/implementation}
